<resources>
    <string name="app_name">Pay Anyone Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="my_payees">My Payees</string>
    <string name="add">Add</string>
    <string name="account_number">Account Number</string>
    <string name="bank">Bank</string>
    <string name="edit">Edit</string>
    <string name="account">Account</string>
    <string name="select_account">Select Account</string>
    <string name="pkr">PKR</string>
    <string name="pay">Pay</string>
    <string name="pay_from">Pay From</string>
    <string name="select_relation">Select Relation</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="pay_to">Pay To</string>
    <string name="purpose">Purpose</string>
    <string name="relation">Relation</string>
    <string name="pay_now">Pay Now</string>
    <string name="btn_continue">Continue</string>
    <string name="_0">0</string>
    <string name="rs">Rs</string>
    <string name="add_comment">Add Comment</string>
    <string name="date">Date</string>
    <string name="your_payment_n_has_been_processed">Your payment \n has been processed</string>
    <string name="amount_sent">Amount Sent</string>
    <string name="check_your_payment_status_in_n_payments_history">Check your payment status in \n Payments history</string>
    <string name="paid_to">Paid to</string>
    <string name="paid_from">Paid From</string>
    <string name="share">Share</string>
    <string name="schedule">Schedule</string>
    <string name="fill_out">Please fill out the amount</string>
    <string name="accounts">Accounts</string>
    <string name="payments">Payments</string>
    <string name="favorites">Favorites</string>
    <string name="purpose_text">Select Purpose</string>
    <string name="relation_text">Select Relation</string>
</resources>