<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.fragmentamount.FragmentAmount">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="@font/aspira_demi"
        android:hint="@string/_0"
        android:inputType="number"
        android:letterSpacing="0"
        android:maxLength="8"
        android:padding="0dp"
        android:textColor="@color/woodsmoke"
        android:textColorHint="@color/woodsmoke"
        android:textSize="@dimen/_50ssp"
        android:layout_marginBottom="@dimen/_69sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/mischka"
        app:cardCornerRadius="@dimen/_14sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/etComment"
        app:layout_constraintEnd_toEndOf="@id/etComment"
        app:layout_constraintStart_toStartOf="@id/etComment"
        app:layout_constraintTop_toTopOf="@id/etComment" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/mischka"
        android:fontFamily="@font/aspira_medium"
        android:hint="@string/add_comment"
        android:letterSpacing="0"
        android:maxLines="1"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/woodsmoke"
        android:textColorHint="@color/woodsmoke"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAmount" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_9sdp"
        android:fontFamily="@font/aspira_demi"
        android:letterSpacing="0"
        android:text="@string/rs"
        android:textColor="@color/santas_grey"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/etAmount"
        app:layout_constraintEnd_toStartOf="@+id/etAmount" />

    <include
        android:id="@+id/btnComponent"
        layout="@layout/button_component" />

</androidx.constraintlayout.widget.ConstraintLayout>