<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginTop="@dimen/_26sdp"
    android:layout_marginEnd="@dimen/_16sdp"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCut" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfile"
        android:layout_width="@dimen/_43sdp"
        android:layout_height="@dimen/_43sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@drawable/profile_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/aspira_demi"
        android:letterSpacing="0"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"
        tools:text="Nida Ali" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/aspira_medium"
        android:letterSpacing="0"
        android:text="@string/account_number"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAccountNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/aspira_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNic"
        tools:text="6110148584391" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/aspira_medium"
        android:letterSpacing="0"
        android:text="@string/bank"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountNum" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/aspira_medium"
        android:letterSpacing="0"
        android:paddingBottom="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBank"
        tools:text="6110148584391" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnDelete"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/white"
        app:contentPadding="@dimen/_9sdp"
        app:layout_constraintBottom_toBottomOf="@id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@drawable/ic_delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:drawableEnd="@drawable/ic_edit"
        android:fontFamily="@font/aspira_demi"
        android:letterSpacing="0"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/woodsmoke"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_14sdp"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintTop_toTopOf="@id/ivTop" />

</androidx.constraintlayout.widget.ConstraintLayout>